[package]
name = "armchine-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn = { path = "unicorn/bindings/rust", version = "1.0.0" }
libc = "0.2"
capstone = "0.6.0"
xmas-elf = "0.8"
iso9660 = {path = "iso9660-rs"}
clap = { version = "3.0.10", features = ["derive"] }